# Pia

./: .claude-auto-memory-setup  .gitignore  CLAUDE.md  cursor-overlay.html  index.html  overlay.html  package-lock.json  package.json  vite.config.js
.claude-workspace/: .gitignore
.claude-workspace/scripts/: status-check.sh  worktree-setup.sh
.claude-workspace/worktrees/accessibility-aria/: STATUS.yml  TASK.md
.claude-workspace/worktrees/action-batching/: STATUS.yml  TASK.md
.claude-workspace/worktrees/action-icons/: STATUS.yml  TASK.md
.claude-workspace/worktrees/action-timeline/: STATUS.yml  TASK.md
.claude-workspace/worktrees/add-app-logo/: STATUS.yml  TASK.md
.claude-workspace/worktrees/add-apple-touch-icon/: STATUS.yml  TASK.md
.claude-workspace/worktrees/add-favicon/: STATUS.yml  TASK.md
.claude-workspace/worktrees/add-minimize-mode/: STATUS.yml  TASK.md
.claude-workspace/worktrees/add-missing-tool-defs/: STATUS.yml  TASK.md
.claude-workspace/worktrees/add-tool-calling-tests/: STATUS.yml  TASK.md
src/: cursor-overlay.js  main.js  overlay.html  overlay.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude-workspace/integration/: MERGE_LOG.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib.rs.bak  main.rs  permissions.rs
src-tauri/src/agent/: action.rs  conversation.rs  delay.rs  history.rs  loop_runner.rs  mod.rs  queue.rs  recovery.rs  retry.rs  state.rs  task_classifier.rs
src-tauri/src/capture/: mod.rs  screenshot.rs
src-tauri/src/config/: credentials.rs  mod.rs  settings.rs
src-tauri/src/history/: mod.rs
src-tauri/src/input/: keyboard.rs  mod.rs  mouse.rs
src-tauri/src/llm/: anthropic.rs  glm.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs  provider.rs  sse.rs
src/icons/: action-icons.js
src/styles/: cursor-overlay.css  design-tokens.css  modal.css  settings.css
(+184 files in other folders)
