[package]
name = "pia"
version = "0.1.0"
description = "Cross-platform computer use agent"
authors = ["you"]
license = "MIT"
repository = "https://github.com/jackulau/Pia"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.5", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["stream", "json"] }

# SSE streaming
eventsource-stream = "0.2"
futures = "0.3"

# Screen capture
xcap = "0.8"

# Input simulation
enigo = { version = "0.3", features = ["serde"] }

# Image processing
image = "0.25"
base64 = "0.22"

# Logging
log = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Lazy initialization
once_cell = "1.19"

# Platform-specific directories
dirs = "6.0"

# Async trait
async-trait = "0.1"

# UUID generation
uuid = { version = "1.20.0", features = ["v4", "serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3           # Maximum optimization
lto = true              # Link-Time Optimization (smaller, faster binary)
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Smaller binary, no unwinding overhead
strip = true            # Strip symbols from binary

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2           # Optimize dependencies even in dev builds
